--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="option">#CDC1C5</color>
+    <color name="black">#000</color>
+    <color name="play">#484E61</color>
+    <color name="stop">#D12807</color>
+    <color name="bright_back">#FCFFE2</color>
+    <color name="gray">#cccccc</color>
+    <color name="white">#ffffff</color>
 </resources>
